--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>my first website</title>
+</head>
+<body>
+	<h1>hi, i'm ryan</h1>
+	i just made a website. nice.
+</body>
+</html>
