--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <body>
 	<h1>hi, i'm ryan</h1>
 	i just made a website. nice.
-	<img src="https://scontent-amt2-1.cdninstagram.com/vp/a0269a718569dfb473234721c259762c/5CF2F68D/t51.2885-15/e35/49704420_2030974613683572_2443251764521884365_n.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com">
+
+	<h2>check out what i look like.</h2>
+	<img src="http://krtv.images.worldnow.com/images/11036445_G.jpg" style="width: 400px;height: 225px">
+	<p style="padding: 13em 0 1em 0">haha just kidding. that's the second image that came up when i googled "ryan hunt." gotcha. this is me.</p>
+	<img src="https://pbs.twimg.com/media/DrWkXNWWkAAdPBm.jpg" style="width: 400px;height:400px">
+	<p style="padding: 1em 0 0 0">if u see me say hi!</p>
 </body>
 </html>
