--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>my first website</title>
+	<title>SUNDAYS: as short film</title>
 </head>
 <body>
-	<h1>hi, i'm ryan</h1>
-	i just made a website. nice.
-
-	<h2>check out what i look like.</h2>
-	<img src="http://krtv.images.worldnow.com/images/11036445_G.jpg" style="width: 400px;height: 225px">
-	<p style="padding: 13em 0 1em 0">haha just kidding. that's the second image that came up when i googled "ryan hunt." gotcha. this is me.</p>
-	<img src="https://pbs.twimg.com/media/DrWkXNWWkAAdPBm.jpg" style="width: 400px;height:400px">
-	<p style="padding: 1em 0 0 0">if u see me say hi!</p>
+	<h1>SUNDAYS</h1>
+	a short film by ryan hunt
+	<h2>ENTER</h2>
 </body>
 </html>
