--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 	<h1>SUNDAYS</h1>
 	a short film by ryan hunt
-	<h2>ENTER</h2>
+	<a href="http://ryislov.github.io/about.html">ENTER</a>
 </body>
 </html>
