--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 	<title>SUNDAYS | ABOUT</title>
 </head>
 <body>
-	<h1>ABOUT		<a href="watch.html">WATCH</a>		<a href="PRESS.html">PRESS</a>		<a href="CONTACT.html">CONTACT</a></h1>
+	<h1>ABOUT		<a href="watch.html">WATCH</a>		<a href="press.html">PRESS</a>		<a href="contact.html">CONTACT</a></h1>
 	<p style="text-align: left;"><strong>SUNDAYS</strong> follows Calvin as he prepares for brunch for the first time with the help of his best friend. It is a short film written and directed by Ryan Hunt.</p>
 	<h3>CAST</h3>
 	<ul>
