--- a/press.html
+++ b/press.html
@@ -4,6 +4,6 @@
 	<title>SUNDAYS | PRESS</title>
 </head>
 <body>
-	<h1><a href="ABOUT.html">ABOUT</a>		<a href="watch.html">WATCH</a>		PRESS		<a href="CONTACT.html">CONTACT</a></h1>
+	<h1><a href="about.html">ABOUT</a>		<a href="watch.html">WATCH</a>		PRESS		<a href="contact.html">CONTACT</a></h1>
 </body>
 </html>
