--- a/watch.html
+++ b/watch.html
@@ -4,6 +4,6 @@
 	<title>SUNDAYS | WATCH</title>
 </head>
 <body>
-	<h1><a href="about.html">ABOUT</a>		WATCH		<a href="/press.html">PRESS</a>		<a href="contact.html">CONTACT</a></h1>
+	<h1><a href="about.html">ABOUT</a>		WATCH		<a href="press.html">PRESS</a>		<a href="contact.html">CONTACT</a></h1>
 </body>
 </html>
