--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 		<li><strong>YEGANEH MAFAHER</strong> is <strong>ARIN.</strong></li>
 		<li><strong>LIZ WHITE</strong> is <strong>MARY.</strong></li>
 		<li><strong>JODI WALTERS</strong> is <strong>KAT.</strong></li>
-		<P>FEATURING</P>
+		</p>FEATURING</p>
 		<li><strong>GEBRIELLA HAILEMARIAM</strong> as <strong>ASHLEY</strong></li>
 		<p>and</p>
 		<li><strong>RACHEL COSTER</strong> as <strong>THE HOST</strong></li>
