--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<title>SUNDAYS | CONTACT</title>
 </head>
 <body>
-	<h1><a href="ABOUT.html">ABOUT</a>		<a href="watch.html">WATCH</a>		<a href="press.html">PRESS</a>		CONTACT</h1>
+	<h1><a href="about.html">ABOUT</a>		<a href="watch.html">WATCH</a>		<a href="press.html">PRESS</a>		CONTACT</h1>
 	<p></p>
 </body>
 </html>
