--- a/about.html
+++ b/about.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" type="text/css" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <head>
-    <title>SUNDAYS | ABOUT</title>
-  </head>
-  <body>
-    <ul class="links">ABOUT
-      <li><a href="watch.html">WATCH</a></li>
-      <li><a href="press.html">PRESS</a></li>
-      <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-    <p style="text-align: left;"><strong>SUNDAYS</strong> follows Calvin as he prepares for brunch for the first time with the help of his best friend. It is a short film written and directed by Ryan Hunt.</p>
-    <h3>CAST</h3>
-    <ul>
-      <li><strong>RYAN HUNT</strong> is <strong>CALVIN.</strong></li>
-      <li><strong>YEGANEH MAFAHER</strong> is <strong>ARIN.</strong></li>
-      <li><strong>LIZ WHITE</strong> is <strong>MARY.</strong></li>
-      <li><strong>JODI WALTERS</strong> is <strong>KAT.</strong></li>
-      <p>FEATURING</p>
-  <li><strong>GEBRIELLA HAILEMARIAM</strong> as <strong>ASHLEY</strong></li>
-  <p>and</p>
-  <li><strong>RACHEL COSTER</strong> as <strong>THE HOST</strong></li>
-  </ul>
+	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display" rel="stylesheet">
+<head>
+	<title>SUNDAYS | ABOUT</title>
+</head>
+<body>
+	<header>
+		<h1 class="title">Sundays</h1>
+		<p class="subtitle">a short film by ryan hunt</p>
+	</header>
+	<div class="links">
+		<ul class="links">
+			<li><a href="about.html">ABOUT</a></li>
+			<li><a href="watch.html">WATCH</a></li>
+			<li><a href="press.html">PRESS</a></li>
+			<li><a href="contact.html">CONTACT</a></li>
+		</ul>
+	</div>
+	<div>
+		<p style="text-align: left;"><strong>SUNDAYS</strong> follows Calvin as he prepares for brunch for the first time with the help of his best friend. It is a short film written and directed by Ryan Hunt.</p>
+	</div>
+	<div>
+		<h3>CAST</h3>
+	<ul>
+		<li><strong>RYAN HUNT</strong> is <strong>CALVIN.</strong></li>
+		<li><strong>YEGANEH MAFAHER</strong> is <strong>ARIN.</strong></li>
+		<li><strong>LIZ WHITE</strong> is <strong>MARY.</strong></li>
+		<li><strong>JODI WALTERS</strong> is <strong>KAT.</strong></li>
+		<p>FEATURING</p>
+		<li><strong>GEBRIELLA HAILEMARIAM</strong> as <strong>ASHLEY</strong></li>
+		<p>and</p>
+		<li><strong>RACHEL COSTER</strong> as <strong>THE HOST</strong></li>
+
+	</ul></div>
 </body>
 </html>
