--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display" rel="stylesheet">
 <head>
-	<title>SUNDAYS: as short film</title>
+	<title>SUNDAYS: a short film by ryan hunt</title>
 </head>
 <body>
-	<h1>SUNDAYS</h1>
-	a short film by ryan hunt
-	<a href="http://ryislov.github.io/about.html">ENTER</a>
+	<h1 class="entertitle">Sundays</h1>
+	<a href="about.html" class="button">ENTER</a>
 </body>
 </html>
