--- a/about.html
+++ b/about.html
@@ -2,38 +2,23 @@
 <html>
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i|Raleway" rel="stylesheet">
 <head>
-	<title>SUNDAYS | ABOUT</title>
+	<title>ryan hunt | about</title>
 </head>
 <body>
 	<header>
-		<h1 class="title">Sundays</h1>
-		<p class="subtitle">a short film by ryan hunt</p>
-	</header>
-	<div class="links">
+		<h1 class="title"><a href="about.html">ryan hunt</a></h1>
+		<nav>
 		<ul class="links">
-			<li><a href="about.html">ABOUT</a></li>
-			<li><a href="watch.html">WATCH</a></li>
-			<li><a href="press.html">PRESS</a></li>
-			<li><a href="contact.html">CONTACT</a></li>
+			<li class="links"><a class="links" href="about.html">about</a></li>
+			<li class="links"><a class="links" href="music.html">listen</a></li>
+			<li class="links"><a class="links" href="film.html">watch</a></li>
+			<li class="links"><a class="links" href="write.html">write</a></li>
+			<li class="links"><a class="links" href="press.html">press</a></li>
+			<li class="links"><a class="links" href="contact.html">contact</a></li>
 		</ul>
-	</div>
-	<div>
-		<p style="text-align: left;"><strong>SUNDAYS</strong> follows Calvin as he prepares for brunch for the first time with the help of his best friend. It is a short film written and directed by Ryan Hunt.</p>
-	</div>
-	<div>
-		<h3>CAST</h3>
-	<ul>
-		<li><strong>RYAN HUNT</strong> is <strong>CALVIN.</strong></li>
-		<li><strong>YEGANEH MAFAHER</strong> is <strong>ARIN.</strong></li>
-		<li><strong>LIZ WHITE</strong> is <strong>MARY.</strong></li>
-		<li><strong>JODI WALTERS</strong> is <strong>KAT.</strong></li>
-		<p>FEATURING</p>
-		<li><strong>GEBRIELLA HAILEMARIAM</strong> as <strong>ASHLEY</strong></li>
-		<p>and</p>
-		<li><strong>RACHEL COSTER</strong> as <strong>THE HOST</strong></li>
-
-	</ul></div>
+	</nav>
+	</header>
 </body>
 </html>
