--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
+	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i|Raleway" rel="stylesheet">
 <head>
-	<title>SUNDAYS | CONTACT</title>
+	<title>ryan hunt | contact</title>
 </head>
 <body>
-	<h1><a href="about.html">ABOUT</a>		<a href="watch.html">WATCH</a>		<a href="press.html">PRESS</a>		CONTACT</h1>
-	<p></p>
+	<header>
+		<h1 class="title"><a href="about.html">ryan hunt</a></h1>
+		<nav>
+		<ul class="links">
+			<li class="links"><a class="links" href="about.html">about</a></li>
+			<li class="links"><a class="links" href="music.html">listen</a></li>
+			<li class="links"><a class="links" href="film.html">watch</a></li>
+			<li class="links"><a class="links" href="write.html">write</a></li>
+			<li class="links"><a class="links" href="press.html">press</a></li>
+			<li class="links"><a class="links" href="contact.html">contact</a></li>
+		</ul>
+	</nav>
+	</header>
 </body>
 </html>
