--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i|Raleway" rel="stylesheet">
 <head>
-	<title>SUNDAYS: a short film by ryan hunt</title>
+	<title>ryan hunt</title>
 </head>
-<body>
-	<h1 class="entertitle">Sundays</h1>
-	<a href="about.html" class="button">ENTER</a>
+<body class="enterbg">
+	<h1 class="entertitle">ryan hunt</h1>
+	<a href="about.html" class="button">enter</a>
 </body>
 </html>
