--- a/write.html
+++ b/write.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html>
 	<link rel="stylesheet" type="text/css" href="reset.css">
+	 <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i|Raleway" rel="stylesheet">
 <head>
-	<title>ryan hunt | write</title>
+	<title>ryan hunt | read</title>
 </head>
 <body>
 	<header>
-		<h1 class="title"><a href="about.html">ryan hunt</a></h1>
-		<nav>
-		<ul class="links">
-			<li class="links"><a class="links" href="about.html">about</a></li>
-			<li class="links"><a class="links" href="music.html">listen</a></li>
-			<li class="links"><a class="links" href="film.html">watch</a></li>
-			<li class="links"><a class="links" href="write.html">write</a></li>
-			<li class="links"><a class="links" href="press.html">press</a></li>
-			<li class="links"><a class="links" href="contact.html">contact</a></li>
-		</ul>
-	</nav>
+		<div class="row">
+			<div class="col m5 s12">	
+				<h1 class="title"><a href="about.html">ryan hunt</a></h1>
+			</div>
+			<div class="col m7 s12">
+				<nav class="z-depth-0">
+					<ul class="links" id="nav-mobile" class="right hide-on-med-and-down">
+						<li class="links"><a class="links" href="about.html">about</a></li>
+						<li class="links"><a class="links" href="music.html">listen</a></li>
+						<li class="links"><a class="links" href="film.html">watch</a></li>
+						<li class="links"><a class="links" href="write.html">read</a></li>
+						<li class="links"><a class="links" href="press.html">press</a></li>
+						<li class="links"><a class="links" href="contact.html">contact</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
 	</header>
 </body>
 </html>
