--- a/about.html
+++ b/about.html
@@ -9,8 +9,13 @@
             
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i|Raleway" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-3.3.1.js"
+	integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+	crossorigin="anonymous"></script>
+	<script src="app.js"></script>
+
 <head>
-	<title>ryan hunt | about</title>
+	<title>ryan hunt | home</title>
 </head>
 <body>
 	<header>
@@ -32,5 +37,32 @@
 			</div>
 		</div>
 	</header>
+	<div class="container">
+		<div class="row">
+			 <div class="slider">
+		    <ul class="slides">
+		      <li>
+		        <img src="/images/music.jpg">
+		        <div class="caption center-align">
+		          <h3>MUSIC</h3>
+		        </div>
+		      </li>
+		      <li>
+		        <img src="/images/film.png">
+		        <div class="caption left-align">
+		          <h3>FILM</h3>
+		        </div>
+		      </li>
+		      <li>
+		        <img src="/images/write.png">
+		        <div class="caption right-align">
+		          <h3>WRITING</h3>
+		        </div>
+		      </li>
+		    </ul>
+		  </div>
+		</div>
+	</div>
+      
 </body>
 </html>
