--- a/about.html
+++ b/about.html
@@ -42,21 +42,21 @@
 			 <div class="slider">
 		    <ul class="slides">
 		      <li>
-		        <img src="/images/music.jpg">
-		        <div class="caption center-align">
-		          <h3>MUSIC</h3>
-		        </div>
-		      </li>
-		      <li>
-		        <img src="/images/film.png">
+		        <img src="images/music.jpg">
 		        <div class="caption left-align">
-		          <h3>FILM</h3>
+		          <h3><a href="music.html">MUSIC</a></h3>
 		        </div>
 		      </li>
 		      <li>
-		        <img src="/images/write.png">
-		        <div class="caption right-align">
-		          <h3>WRITING</h3>
+		        <img src="images/film.png">
+		        <div class="caption left-align">
+		          <h3><a href="film.html">FILM</a></h3>
+		        </div>
+		      </li>
+		      <li>
+		        <img src="images/write.png">
+		        <div class="caption left-align">
+		          <h3><a href="write.html">WRITING</a></h3>
 		        </div>
 		      </li>
 		    </ul>
