--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
             
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i|Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Vollkorn:400,600i,700i" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-3.3.1.js"
 	integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
 	crossorigin="anonymous"></script>
@@ -49,13 +49,13 @@
 		      </li>
 		      <li>
 		        <img src="images/film.png">
-		        <div class="caption left-align">
+		        <div class="caption right-align">
 		          <h3><a href="film.html">FILM</a></h3>
 		        </div>
 		      </li>
 		      <li>
 		        <img src="images/write.png">
-		        <div class="caption left-align">
+		        <div class="caption center-align">
 		          <h3><a href="write.html">WRITING</a></h3>
 		        </div>
 		      </li>
