--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i|Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Vollkorn:400,600i,700i" rel="stylesheet">
 <head>
 	<title>ryan hunt</title>
 </head>
